<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/my_nanodegree_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_nanodegree_app"
        android:textSize="20sp" />

    <Button
        android:id="@+id/spotify_streamer"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/scores_app"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/library_app"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/baccon_reader"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/baccon_reader"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/capstone_my_own_app"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
